# gsm-0610-codec

./: CMakeLists.txt  README.md
include/gsm-0610-codec/: Decoder.h  Encoder.h  Parameters.h  wav_util.h
src/: Decoder.cpp  Encoder.cpp  Parameters.cpp  fixed_math.cpp  fixed_math.h  wav_util.cpp
tests/: gsm-test-0.cpp  unit-test-1.cpp
